Bug 162420 - The "new tab" and "close tab" buttons don't appear when launching konsole
Summary: The "new tab" and "close tab" buttons don't appear when launching konsole
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-05-21 18:39 UTC by Christophe Marin
Modified: 2008-05-22 00:20 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christophe Marin 2008-05-21 18:39:17 UTC
Version:           2.1 (using 4.00.80 (KDE 4.0.80 >= (KDE 4.1 Beta1), compiled sources)
Compiler:          gcc
OS:                Linux (i686) release 2.6.25.3-mokona

kdebase rev. 810782

This is a fresh issue (didn't have it two days ago).

The "new tab" and "close tab" buttons don't appear in the tab bar.

I deleted konsolerc and $KDEHOME/share/apps/konsole / launched konsole again and re-checked this option : same result.

The line ShowNewAndCloseTabButtons=true is present in Shell.profile.

To make these buttons appear again I have to change an option first then apply.
Comment 1 Robert Knight 2008-05-22 00:20:21 UTC
SVN commit 810949 by knight:


Fix "Show 'New Tab' and 'Close Tab' buttons on tab bar" setting not being 
applied correctly on startup.

Test for the tab bar being explicitly hidden with isHidden() rather than just
isVisible() which will return true if the setting is applied before the 
container widget is shown.

BUG: 162420
CCBUG: 157015



 M  +3 -27     ViewContainer.cpp  
 M  +1 -1      ViewManager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=810949