Fix "Show 'New Tab' and 'Close Tab' buttons on tab bar" setting not being applied correctly on startup.

Test for the tab bar being explicitly hidden with isHidden() rather than just
isVisible() which will return true if the setting is applied before the 
container widget is shown.

BUG: 162420
CCBUG: 157015


svn path=/trunk/KDE/kdebase/apps/konsole/; revision=810949